--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Abdullah Afzal's Chess.com profile and ratings." />
   <meta name="keywords" content="abdullah afzal chess rating, abdullah_afzal151, chess.com, rapid chess rating, blitz rating, bullet chess, abdullah afzal chess profile" />
   <meta name="author" content="Abdullah Afzal" />
   <meta name="google-site-verification" content="ZjKxc_S-XbHRb_ycZlixbANpZcw4kFjMddkOdGBl3Q8" />
+  <meta name="google-site-verification" content="KG5BE1PLI0dVFx1G-qPQTv72TGtNXGwzqLcfMcpFL0A" />
   <title>Abdullah Afzal | Chess Profile</title>
   <style>
     body {
